force-app/main/default/objects/MODT_Details__c/MODT_Details__c.object-meta.xml
<CustomObject>
    <label>MODT Details</label>
    <nameField>
        <displayFormat>MODT-{00000000}</displayFormat>
        <label>MODT Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MODT Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>