force-app/main/default/objects/MODT_Details__c/fields/Date_Of_Execution__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Execution__c</fullName>
    <label>Date Of Execution</label>
    <type>Date</type>
</CustomField>