force-app/main/default/objects/MODT_Details__c/fields/Is_Document_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Document_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Document Closed</label>
    <type>Checkbox</type>
</CustomField>