force-app/main/default/objects/MODT_Details__c/fields/MODT_ID__c.field-meta.xml
<CustomField>
    <fullName>MODT_ID__c</fullName>
    <label>MODT ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>