force-app/main/default/objects/MODT_Details__c/fields/MODT_Value__c.field-meta.xml
<CustomField>
    <fullName>MODT_Value__c</fullName>
    <label>MODT Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>