force-app/main/default/objects/MODT_Details__c/fields/Mortgager_Name__c.field-meta.xml
<CustomField>
    <fullName>Mortgager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mortgager Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Financial_Entity__c.Entity_Type__c</field>
            <operation>equals</operation>
            <value>Borrower</value>
        </filterItems>
        <filterItems>
            <field>Financial_Entity__c.Entity_Type__c</field>
            <operation>equals</operation>
            <value>Co-Borrower</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Financial_Entity__c</referenceTo>
    <relationshipLabel>MODT Details</relationshipLabel>
    <relationshipName>MODT_Details</relationshipName>
    <type>Lookup</type>
</CustomField>