force-app/main/default/objects/MODT_Details__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <type>Address</type>
</CustomField>