force-app/main/default/objects/MODT_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Financial_Account__c</columns>
    <columns>MODT_Value__c</columns>
    <columns>Mortgager_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Task_Id__c</columns>
    <columns>Date_Of_Execution__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>